# test-data-acquisition

./: .env.example  Dockerfile  Readme.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/dependencies/: auth.py
app/api/handlers/: items.py  users.py
app/api/schemas/: items.py  users.py
app/core/: settings.py
app/database/: database.py
app/database/migrations/: env.py
app/database/migrations/versions/: fb93cf031e22_init.py
app/database/models/: base.py  items.py  users.py
app/database/repositories/: items.py  users.py
app/services/: items.py  users.py
app/utils/: password.py
